k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swiggy-deployment
  namespace: swiggy
  labels:
    app: swiggy
spec:
  replicas: 1                       # t2.micro -> 1
  selector:
    matchLabels:
      app: swiggy
  template:
    metadata:
      labels:
        app: swiggy
    spec:
      containers:
        - name: swiggy
          image: ramyaeedara015/swiggy-clone:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
